--- a/package.json
+++ b/package.json
@@ -9,63 +9,21 @@
             "start": "npm run dev"
       },
       "dependencies": {
-            "@antv/xflow": "^1.0.51",
             "@deepkit/core": "1.0.1-alpha.75",
             "@deepkit/type": "1.0.1-alpha.75",
             "@umijs/max": "^4.0.22",
-            "@yaoapp/types": "^1.1.3",
-            "ahooks": "^3.7.0",
-            "antd": "^4.23.2",
-            "axios": "^0.27.2",
-            "echarts": "^5.3.3",
-            "fast-equals": "^4.0.3",
-            "framer-motion": "^7.2.1",
-            "lodash-es": "^4.17.21",
-            "minimatch": "^5.1.0",
             "mobx": "^6.6.1",
             "mobx-react-lite": "^3.4.0",
-            "phosphor-react": "^1.4.1",
-            "react-activation": "^0.12.0",
-            "react-helmet-async": "^1.3.0",
-            "react-icons": "^4.4.0",
-            "react-monaco-editor": "^0.50.1",
             "reflect-metadata": "^0.1.13",
-            "socket.io-client": "^4.5.2",
-            "store2": "^2.14.2",
             "tslib": "^2.4.0",
-            "tsyringe": "^4.7.0",
-            "url-pattern": "^1.0.3"
+            "tsyringe": "^4.7.0"
       },
       "devDependencies": {
             "@deepkit/type-compiler": "1.0.1-alpha.75",
-            "@swc/core": "^1.2.165",
-            "@types/lodash-es": "^4.17.6",
-            "@types/minimatch": "^5.1.2",
-            "@types/node": "^16.11.26",
             "@types/react": "^18.0.18",
             "@types/react-dom": "^18.0.6",
             "babel-plugin-transform-typescript-metadata": "^0.3.2",
-            "cross-env": "^7.0.3",
-            "less": "^4.1.3",
-            "less-vars-to-js": "^1.3.0",
-            "lint-staged": "^13.0.3",
-            "prettier": "^2.7.1",
             "ts-loader": "^9.4.1",
-            "tsx": "^3.9.0",
-            "typescript": "^4.8.3",
-            "umi-plugin-electron-builder": "^4.0.0-beta4",
-            "webpack-chain": "^6.5.1",
-            "yorkie": "^2.0.0"
-      },
-      "lint-staged": {
-            "*.{js,jsx,less,md,json}": [
-                  "prettier --write"
-            ],
-            "*.ts?(x)": [
-                  "prettier --parser=typescript --write"
-            ]
-      },
-      "gitHooks": {
-            "pre-commit": "lint-staged --allow-empty"
+            "typescript": "^4.8.3"
       }
 }
