[add] 可行性方案

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "./src/.umi/tsconfig.json",
 	"compilerOptions": {
+            "emitDecoratorMetadata": true,
 		"experimentalDecorators": true
 	},
 	"reflection": true
