--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
             "@types/react": "^18.0.18",
             "@types/react-dom": "^18.0.6",
             "babel-plugin-transform-typescript-metadata": "^0.3.2",
+            "react-refresh-typescript": "^2.0.7",
             "ts-loader": "^9.4.1",
             "typescript": "^4.8.3"
       }
